<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="noScroll"
            app:menu="@menu/top_app_bar_list"
            app:navigationIcon="@drawable/expand_icon"
            app:title="@string/weeks" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:background="@drawable/ame"
                android:layout_width="16sp"
                android:layout_height="210dp"
                android:layout_marginTop="19sp"
                android:gravity="center"
                android:text="@string/M" />

            <TextView
                android:background="@color/deep_purple_500"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:layout_marginTop="1dp"
                android:gravity="center"
                android:text="@string/A" />

            <TextView
                android:background="@color/purple_500"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="1dp"
                android:gravity="center"
                android:text="@string/E" />
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginTop="5dp"
            android:id="@+id/recycler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>